# DSF

./: .gitignore  Rand_Forest+Lasso (1).ipynb  Rand_Forest+Lasso.ipynb  airbnb.ipynb  cleaned CSV file for tourist attractions.csv  data_overview.ipynb  feature_importance.csv  lasso.ipynb  model_unscaled.ipynb  models.ipynb  models_final.ipynb  models_new copy.ipynb  models_new.ipynb  pyproject.toml
archive/: Rand_Forest+Lasso (1).ipynb  data_overview.ipynb  models.ipynb
data_analysis/: airbnb.ipynb  airbnb2.ipynb  create_features.ipynb  skewness_kurtosis_results.csv
data_sourcing/: clean_airbnb_data.ipynb  noise_data.ipynb  noise_modelling.ipynb  open_data_zurich.ipynb  statistical_zones.ipynb  street_net.ipynb
examples/: fetch_sg_data.ipynb
hooks/: pre-commit
scripts/: install_hooks.py
src/dsf/: client.py
